overflow no longer hidden; state no longer retrieved in beginflow function

--- a/application.css
+++ b/application.css
@@ -46,11 +46,6 @@ input[type="submit"] {
   cursor: pointer;
 }
 
-body, html {
-  overflow-x: hidden;
-  overflow-y: hidden;
-}
-
 div {
   text-transform: uppercase;
 }
